--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Nuxt.js + Vuetify.js project",
   "author": "pikaryan <lirunw@gmail.com>",
   "private": true,
+  "nuxt": {
+    "host": "0.0.0.0",
+    "port": "3333"
+  },
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=development HOST=0.0.0.0 PORT=3000 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -13,11 +17,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "nuxt": "^1.0.0",
+    "vue-simple-svg": "^1.3.1",
     "vuetify": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-imports": "^1.4.1",
+    "cross-env": "^5.2.0",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
