--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "description": "Nuxt.js + Vuetify.js project",
   "author": "pikaryan <lirunw@gmail.com>",
   "private": true,
-  "nuxt": {
-    "host": "0.0.0.0",
-    "port": "3333"
-  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development HOST=0.0.0.0 PORT=3000 nuxt",
     "build": "nuxt build",
@@ -16,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "nuxt": "^1.0.0",
+    "nuxt-edge": "^2.0.0-25523369.7c85202",
     "vue-simple-svg": "^1.3.1",
     "vuetify": "^1.0.0"
   },
