--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "nuxt-edge": "^2.0.0-25523369.7c85202",
+    "vue-infinite-loading": "^2.3.1",
     "vue-simple-svg": "^1.3.1",
     "vuetify": "^1.0.0"
   },
