--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.10",
     "nuxt-edge": "^2.0.0-25523369.7c85202",
     "vue-infinite-loading": "^2.3.1",
+    "vue-scrollto": "^2.11.0",
     "vue-simple-svg": "^1.3.1",
     "vuetify": "^1.0.0"
   },
