--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
-    "nuxt-edge": "^2.0.0-25523369.7c85202",
+    "nuxt-edge": "^2.0.0-25548186.7998516",
     "vue-infinite-loading": "^2.3.1",
     "vue-scrollto": "^2.11.0",
     "vue-simple-svg": "^1.3.1",
+    "vue-svg-loader": "^0.5.0",
     "vuetify": "^1.0.0"
   },
   "devDependencies": {
