--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nuxt-sass-resources-loader": "^2.0.3",
     "sass-loader": "^7.0.3",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "vue-baidu-map": "^0.21.11"
   }
 }
