--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "nuxt-edge": "^2.0.0-25548186.7998516",
+    "vue-amap": "^0.5.8",
     "vue-infinite-loading": "^2.3.1",
     "vue-scrollto": "^2.11.0",
     "vue-simple-svg": "^1.3.1",
