--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cookieparser": "^0.1.0",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "nuxt-edge": "^2.0.0-25548186.7998516",
     "vue-amap": "^0.5.8",
