--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-scrollto": "^2.11.0",
     "vue-simple-svg": "^1.3.1",
     "vue-svg-loader": "^0.5.0",
-    "vuetify": "^1.0.0"
+    "vuetify": "^1.0.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
