--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "vue-amap": "^0.5.8",
     "vue-infinite-loading": "^2.3.1",
     "vue-scrollto": "^2.11.0",
-    "vue-simple-svg": "^1.3.1",
     "vue-svg-loader": "^0.5.0",
-    "vuetify": "^1.0.0",
-    "vuex-router-sync": "^5.0.0"
+    "vuetify": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
